# agent-os

./: .env.example  .gitignore  AGENTOS-PLAN.md  AGENTS.md  Agent OS Dashboard.html  README.md  VPS-DEPLOYMENT-PLAN.md  docker-compose.local.yml  docker-compose.vps.yml  docker-compose.yml
.claude/: settings.local.json
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_conversations_messages.py
api/app/: config.py  database.py  main.py
api/app/models/: __init__.py  activity.py  agent.py  conversation.py  metric.py  project.py  token_record.py  user.py
api/app/routers/: activity.py  agents.py  auth.py  brain.py  chat.py  conversations.py  metrics.py  projects.py  spend.py  tokens.py
api/app/schemas/: __init__.py  activity.py  agent.py  conversation.py  metric.py  project.py  token.py  user.py
api/app/services/: activity_stream.py  agent_manager.py  metric_collector.py
api/app/utils/: crypto.py  pagination.py
api/app/websocket/: activity.py  agent_logs.py  metrics.py
api/tests/: conftest.py  test_api_routes.py  test_ws.py
deploy/scripts/: deploy.sh  setup-vps.sh
deploy/traefik/: traefik.yml
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  LOCAL-DEV.md
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  config.js  index.css
monitor/: Dockerfile  monitor.py  pyproject.toml
monitor/publishers/: api_publisher.py  ws_publisher.py
runner/: Dockerfile  pyproject.toml  runner.py
runner/agents/: __init__.py  claude_adapter.py  codex_adapter.py  hermes_adapter.py
(+9 files in other folders)
