[project]
name = "agentos-monitor"
version = "0.1.0"
description = "Agent OS — VPS system metrics collector"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
